<resources>
    <!-- Titles -->
    <string name="app_name">Gochat</string>
    <string name="app_subtitle">lorem ipsum</string>
    <string name="signupTitle">Sign Up</string>
    <string name="signupSubtitle">Step 1/1</string>


    <string name="logout_menuItem">Log out</string>
    <string name="friends_menuItem">Friends</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <!-- Valores de tabs -->
    <string name="title_messages_tab">Mensajes</string>
    <string name="title_friends_tab">Amigos</string>

    <string name="empty_Inbox_Label">No hay nuevos mensajes</string>
    <string name="empty_Friends_Label">Añade amigos para empezar</string>


    <string name="username_hint">Nombre de usuario</string>
    <string name="password_hint">Contraseña</string>
    <string name="email_hint">Email</string>


    <string name="sign_up_text">¡Registrate!</string>

    <string name="Login_button_label">Entrar!</string>
    <string name="sign_up_button_label">Registrar</string>
    <string name="title_activity_edit_friends">EditFriendsActivity</string>

    <!-- Errores -->
    <string name="editFriendsErrorTitle">Error en la carga de tus amigos, por favor inténtelo de nuevo.</string>


    <!-- Icono camara-->
    <string name="menu_camera_label">Cámara</string>
    <string name="menu_choose_option_label">Selecciona una opción</string>
    <string name="menu_send">Enviar</string>

    <string-array name="camera_choices">
        <item>Haz una foto</item>
        <item>Haz un video</item>
        <item>Elige una foto</item>
        <item>Elige un video</item>
    </string-array>

    <!-- Advertencias camaras-->
    <string name="camera_left_warning">No se guardó la captura</string>
    <string name="title_activity_recipients">Enviar a</string>
    <string name="title_activity_recipients2">RecipientsActivity2</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="buttonCancel">Cancelar</string>


</resources>
